Removed hover effects on mobile. Other small fixes.

--- a/styles.css
+++ b/styles.css
@@ -187,21 +187,6 @@ img {
     font-family: 'Space Mono', sans-serif;
 }
 
-.skill-link {
-    box-sizing: border-box;
-    text-decoration: underline;
-    color: var(--text-normal);
-    background-color: var(--secondary-background);
-    border-radius: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-family: 'Space Mono', sans-serif;
-}
-
-.skill-link:hover {
-    color: var(--highlight);
-}
-
 .inline-link {
     text-decoration: underline;
     color: var(--text-normal);
@@ -240,6 +225,10 @@ img {
     color: var(--highlight);
 }
 
+.project-wrapper:hover .skill {
+    color: var(--highlight);
+}
+
 .experience-wrapper:hover {
     background-color: var(--hover);
     border-left: 2px solid var(--highlight);
@@ -275,7 +264,7 @@ img {
 
 .footer {
     color: var(--text-normal);
-    margin: 100px 10px 50px 10px;
+    margin: 0px 10px 50px 10px;
     font-family: 'Space Mono', sans-serif;
     font-weight: normal;
     font-size: 14px;
@@ -308,9 +297,6 @@ img {
     width: 30%;
 }
 
-.active-section:hover {
-    color: #ebebeb;
-}
 
 .role-wrapper {
     display: flex;
@@ -386,8 +372,7 @@ img {
     display: block;
 }
 
-.nav-link.active,
-.nav-link:hover {
+.nav-link.active {
     color: var(--highlight);
     margin-left: 20px;
 }
@@ -442,8 +427,7 @@ img {
     color: var(--text-normal);
 }
 
-.light .nav-link.active,
-.light .nav-link:hover {
+.light .nav-link.active {
     color: var(--highlight);
 }
 
@@ -602,6 +586,44 @@ img {
 }
 
 @media (max-width: 820px) {
+
+    .table-of-contents-link:hover .nav-link {
+        color: var(--text-normal);
+        margin-left: 10px;
+    }
+
+    .inline-link:hover {
+        color: inherit;
+    }
+
+    .project-wrapper:hover {
+        transform: inherit;
+        background-color: inherit;
+        border-left: 2px solid transparent;
+    }
+
+    .social-icon-link:hover {
+        opacity: 0.6;
+    }
+
+    .social-icon-link img:hover {
+        opacity: 0.8;
+        filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%) contrast(0%);
+    }
+
+    .experience-wrapper:hover {
+        background-color: inherit;
+        border-left: 2px solid transparent;
+        transform: inherit;
+    }
+
+    .experience-wrapper:hover .skill {
+        color: var(--text-normal);
+    }
+
+    .view-resume-button:hover {
+        color: var(--text-normal);
+    }
 
     html,
     body {
